Update quotes to output single file

--- a/quotes_stats.ipynb
+++ b/quotes_stats.ipynb
@@ -13,36 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5dcc7328",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
-    "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
+    "def get_years_dfs(input_path: str):\n",
+    "    excel_file = pd.ExcelFile(input_path)\n",
     "    \n",
-    "    for sheet in misinfotext_file.sheet_names:\n",
+    "    for sheet in excel_file.sheet_names:\n",
     "        if not \"_proportion\" in sheet:\n",
     "            continue\n",
     "\n",
-    "        df = pd.read_excel(misinfotext_file, sheet_name=sheet)\n",
-    "        df[\"year\"] = (sheet.replace(\"_proportion\", \"\"))\n",
-    "        yield df\n",
-    "    \n",
-    "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
-    "    \n",
-    "    for sheet in fakespeak_file.sheet_names:\n",
-    "        if not \"_proportion\" in sheet:\n",
-    "            continue\n",
-    "\n",
-    "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
-    "        df[\"year\"] = (sheet.replace(\"_proportion\", \"\"))\n",
+    "        df = pd.read_excel(excel_file, sheet_name=sheet)\n",
     "        yield df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cf8125b",
+   "metadata": {},
+   "source": [
+    "#### All text types"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ff54887b",
    "metadata": {},
    "outputs": [
@@ -56,20 +53,16 @@
     {
      "data": {
       "text/plain": [
-       "KruskalResult(statistic=65.57328740416482, pvalue=2.7106154869423513e-08)"
+       "KruskalResult(statistic=53.04356192552119, pvalue=3.792204545352561e-06)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_quotes.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_quotes.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/quotes.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_quote_words_to_total_words\")"
    ]
   },
@@ -86,12 +79,20 @@
    "id": "ffa2d7f6",
    "metadata": {},
    "source": [
-    "#### Now repeat for specific text types"
+    "### Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ed9082",
+   "metadata": {},
+   "source": [
+    "#### News and blog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fb39b872",
    "metadata": {},
    "outputs": [
@@ -108,17 +109,13 @@
        "KruskalResult(statistic=44.67464851572436, pvalue=8.616858375781115e-05)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_quotes.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_quotes.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/news_and_blog/quotes_news_and_blog.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_quote_words_to_total_words\")"
    ]
   },
@@ -131,8 +128,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2d60dba",
+   "metadata": {},
+   "source": [
+    "#### Press release"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "647934b3",
    "metadata": {},
    "outputs": [
@@ -149,17 +154,13 @@
        "KruskalResult(statistic=16.913648726202048, pvalue=0.32405266293129953)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_quotes.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_quotes.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/press_release/quotes_press_release.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_quote_words_to_total_words\")"
    ]
   },
@@ -172,8 +173,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4648ca98",
+   "metadata": {},
+   "source": [
+    "#### Social media"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f0116f3a",
    "metadata": {},
    "outputs": [
@@ -190,17 +199,13 @@
        "KruskalResult(statistic=12.538805622783746, pvalue=0.40343307180499893)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_quotes.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_quotes.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/social_media/quotes_social_media.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_quote_words_to_total_words\")"
    ]
   },
