--- a/ner_trendlines.ipynb
+++ b/ner_trendlines.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1f26e03d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.pyplot import Axes"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
