--- a/quotes_scatterplots.ipynb
+++ b/quotes_scatterplots.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9985b2e7",
    "metadata": {},
    "outputs": [
@@ -323,13 +323,16 @@
     }
    ],
    "source": [
-    "num_quotes_all_types_df = pd.read_excel(\"./output/quotes.xlsx\", sheet_name=\"Num Quotes Proportions\")\n",
+    "num_quotes_all_types_df = pd.read_excel(\n",
+    "    \"./output/quotes.xlsx\", \n",
+    "    sheet_name=\"Num Quotes Proportions\"\n",
+    ")\n",
     "num_quotes_all_types_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9e4e3acf",
    "metadata": {},
    "outputs": [
@@ -469,13 +472,16 @@
     }
    ],
    "source": [
-    "num_quotes_news_and_blog_df = pd.read_excel(\"./output/news_and_blog/quotes_news_and_blog.xlsx\", sheet_name=\"Num Quotes Proportions\")\n",
+    "num_quotes_news_and_blog_df = pd.read_excel(\n",
+    "    \"./output/news_and_blog/quotes_news_and_blog.xlsx\", \n",
+    "    sheet_name=\"Num Quotes Proportions\"\n",
+    ")\n",
     "num_quotes_news_and_blog_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "51001a9f",
    "metadata": {},
    "outputs": [
@@ -615,13 +621,16 @@
     }
    ],
    "source": [
-    "num_quotes_press_release_df = pd.read_excel(\"./output/press_release/quotes_press_release.xlsx\", sheet_name=\"Num Quotes Proportions\")\n",
+    "num_quotes_press_release_df = pd.read_excel(\n",
+    "    \"./output/press_release/quotes_press_release.xlsx\", \n",
+    "    sheet_name=\"Num Quotes Proportions\"\n",
+    ")\n",
     "num_quotes_press_release_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6149a413",
    "metadata": {},
    "outputs": [
@@ -749,7 +758,10 @@
     }
    ],
    "source": [
-    "num_quotes_social_media_df = pd.read_excel(\"./output/social_media/quotes_social_media.xlsx\", sheet_name=\"Num Quotes Proportions\")\n",
+    "num_quotes_social_media_df = pd.read_excel(\n",
+    "    \"./output/social_media/quotes_social_media.xlsx\", \n",
+    "    sheet_name=\"Num Quotes Proportions\"\n",
+    ")\n",
     "num_quotes_social_media_df"
    ]
   },
