Create keyness analysis

--- a/_install_modules.ipynb
+++ b/_install_modules.ipynb
@@ -107,6 +107,48 @@
    "source": [
     "%pip install seaborn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1edf8e61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting corpus-toolkit\n",
+      "  Downloading corpus_toolkit-0.32-py3-none-any.whl.metadata (20 kB)\n",
+      "Downloading corpus_toolkit-0.32-py3-none-any.whl (1.7 MB)\n",
+      "   ---------------------------------------- 0.0/1.7 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.7/1.7 MB 13.4 MB/s  0:00:00\n",
+      "Installing collected packages: corpus-toolkit\n",
+      "Successfully installed corpus-toolkit-0.32\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install corpus-toolkit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c35a12a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +158,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
